config msmtp emails with environment vars

--- a/.env.example
+++ b/.env.example
@@ -34,14 +34,22 @@ TSUGI_ADMIN_PASSWORD=xxxxx
 TSUGI_LANG=es
 TSUGI_GOOGLE_CLIENT_ID=client_if_goes_here
 TSUGI_GOOGLE_CLIENT_SECRET=your_secret_here
-TSUGI_OWNER_NAME=Owner Name
-TSUGI_OWNER_EMAIL=owner.name@juezlti.eu
-TSUGI_MAIL_DOMAIN=juezlti.eu
-TSUGI_MAIL_SECRET=warning:please-change-mailsecret-92ds29
 TSUGI_PROVIDE_KEYS=true
 TSUGI_DEVELOPER_MODE=false
 TSUGI_PANIC_RESTART_PASSWORD=xxxxx
 TSUGI_PANIC_RESTART_EMAIL=info@juezlti.eu
+
+# SMTP configuration
+# maybe, you could need config more msmtp vars in tsugi/Dockerfile_tsugi-ct
+TSUGI_SMTP_HOST=smtp.domain.eu
+TSUGI_SMTP_PORT=587
+TSUGI_SMTP_STARTTLS=on
+TSUGI_SMTP_USER=EMAIL_EXAMPLE@DOMAIN_EXAMPLE
+TSUGI_SMTP_PASSWORD="EMAIL_EXAMPLE_PASSWORD"
+TSUGI_OWNER_NAME=Owner Name
+TSUGI_OWNER_EMAIL=owner.name@juezlti.eu
+TSUGI_MAIL_DOMAIN=juezlti.eu
+TSUGI_MAIL_SECRET=warning:please-change-mailsecret-92ds29
 
 # Spring configurations
 SPRING_PORT=8080
