--- a/.env.example
+++ b/.env.example
@@ -91,3 +91,7 @@ NGINX_TSUGI_URL=tsugi-codetest:80
 # after that we need link domain ports 80 or 443 to external ports juezlti nginx container. 
 NGINX_PORT=80 # or 8888
 NGINX_SECURE_PORT=443 #or 4433 f.e.
+
+# Mongo validator
+MONGO_DB_CONTAINER_NAME=mongo_database_validator
+MONGO_DB_VALIDATOR_PORT=27017
