MongoDB validator added

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ FEEDBACK_MANAGER_BRANCH=master
 XML_VALIDATOR_BRANCH=master
 JAVA_VALIDATOR_BRANCH=master
 SQL_VALIDATOR_BRANCH=master
+MONGO_VALIDATOR_BRANCH=main
 
 # MySQL credentials, used by tsugi and codetest
 MYSQL_HOST=tsugi-mysql-db
@@ -99,3 +100,7 @@ NGINX_TSUGI_URL=tsugi-codetest:80
 # after that we need link domain ports 80 or 443 to external ports juezlti nginx container. 
 NGINX_PORT=80 # or 8888
 NGINX_SECURE_PORT=443 #or 4433 f.e.
+
+# Mongo validator
+MONGO_DB_CONTAINER_NAME=mongo_database_validator
+MONGO_DB_VALIDATOR_PORT=27017
