--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,6 +159,29 @@ services:
       args:
         PORT: ${FEEDBACK_MANAGER_PORT}
         FEEDBACK_MANAGER_BRANCH: ${FEEDBACK_MANAGER_BRANCH}
+  mongo-validator:
+    container_name: mongo-validator_container
+    image: mongo-validator_img
+    restart: unless-stopped
+    build:
+      context: ./validators/
+      dockerfile: Dockerfile_mongo_validator
+      args:
+        MONGO_VALIDATOR_BRANCH: ${MONGO_VALIDATOR_BRANCH}
+    environment:
+      FEEDBACK_MANAGER_URL: ${FEEDBACK_MANAGER_URL}
+      BASE_URL: ${SPRING_REQUESTS_BASE_URL}/api
+      PORT: ${NODE_SERVER_PORT}
+      EMAIL: ${SPRING_REQUESTS_EMAIL}
+      PASSWORD: ${SPRING_REQUESTS_PASSWORD}
+      MONGO_DB_VALIDATOR_PORT: ${MONGO_DB_VALIDATOR_PORT}
+      MONGO_DB_CONTAINER_NAME: ${MONGO_DB_CONTAINER_NAME}
+    depends_on:
+      - db-validator-mongo
+  db-validator-mongo:
+    container_name: ${MONGO_DB_CONTAINER_NAME}
+    image: mongo
+    restart: always
 #  template-validator:
 #    container_name: template-validator_container
 #    image: template-validator_img
