Adding MONGO_VALIDATOR_BRANCH to .env.example

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ FEEDBACK_MANAGER_BRANCH=master
 XML_VALIDATOR_BRANCH=master
 JAVA_VALIDATOR_BRANCH=master
 SQL_VALIDATOR_BRANCH=master
+MONGO_VALIDATOR_BRANCH=main
 
 # MySQL credentials, used by tsugi and codetest
 MYSQL_HOST=tsugi-mysql-db
