--- a/.env.example
+++ b/.env.example
@@ -104,3 +104,7 @@ NGINX_SECURE_PORT=443 #or 4433 f.e.
 # Mongo validator
 MONGO_DB_CONTAINER_NAME=localhost
 MONGO_DB_VALIDATOR_PORT=27017
+
+# Open AI credentials
+OPENAI_API_KEY=put_your_AI_key_here
+OPENAI_API_MODEL="gpt-3.5-turbo"
