--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -214,6 +214,10 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     volumes:
       - 'mysql_data_container:/var/lib/mysql:delegated'
+    ulimits:
+      nofile:
+        soft: 65536
+        hard: 65536
     ports:
       - 3307:3306
   spring-mongo-db:
