--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,7 @@ COMPOSE_PROJECT_NAME=juezlti-docker-project
 TSUGI_DOMAIN=localhost
 
 # The branches from where the code will be downloaded
-TSUGI_BRANCH=codetest-customizations
+TSUGI_BRANCH=master
 CODETEST_BRANCH=master
 REPO_BRANCH=master
 FEEDBACK_MANAGER_BRANCH=master
