--- a/tsugi/Dockerfile_tsugi-ct
+++ b/tsugi/Dockerfile_tsugi-ct
@@ -1,11 +1,11 @@
-FROM php:7.3.21-apache
+FROM php:8.2-apache
 
 ARG TSUGI_BRANCH=${TSUGI_BRANCH}
 ARG CODETEST_BRANCH=${CODETEST_BRANCH}
 
 WORKDIR /git-clones
 
-RUN apt-get update && apt-get install -y git netcat libzip-dev zip msmtp mailutils && apt-get clean -y
+RUN apt-get update && apt-get install -y git netcat-traditional libzip-dev zip  msmtp mailutils && apt-get clean -y
 RUN docker-php-ext-install pdo pdo_mysql mysqli zip
 RUN a2enmod rewrite
 
