--- a/tsugi/Dockerfile_tsugi-ct
+++ b/tsugi/Dockerfile_tsugi-ct
@@ -17,8 +17,8 @@ RUN npm ci && npm run build
 FROM php:8.2-apache AS php-setup
 
 # PHP extensions
-RUN apt-get update && apt-get install -y git netcat-traditional libzip-dev zip sendmail && apt-get clean -y
-RUN docker-php-ext-install pdo pdo_mysql mysqli zip
+RUN apt-get update && apt-get install -y git netcat-traditional libzip-dev zip sendmail libpng-dev && apt-get clean -y
+RUN docker-php-ext-install pdo pdo_mysql mysqli zip gd
 RUN a2enmod rewrite
 # PHP Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
